--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Manuel Alejandro Polanco - Personal Website</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="images/icon-manuel.png" type="image/png">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
