--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <div class="top-bar">
         <div class="top-bar__container">
             <div class="top-bar__social">
-                <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.facebook.com/manuel.polanco.16" aria-label="Facebook" target="_blank"><i class="fab fa-facebook-f"  ></i></a>
+                <a href="https://www.instagram.com/manuelpolancol/" aria-label="Instagram" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/manuelpolanco/" aria-label="LinkedIn" target="_blank"><i class="fab fa-linkedin-in"></i></a>
             </div>
         </div>
     </div>
@@ -63,9 +63,9 @@
 
         <!-- Hero social icons -->
         <div class="hero__social">
-            <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.facebook.com/manuel.polanco.16" aria-label="Facebook" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/manuelpolancol/" aria-label="Instagram" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/manuelpolanco/" aria-label="LinkedIn" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         </div>
     </main>
 
@@ -288,9 +288,9 @@
             <div class="footer__left">
                 <div class="footer__name">MANUEL ALEJANDRO POLANCO LARREAL</div>
                 <div class="footer__social">
-                    <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://www.facebook.com/manuel.polanco.16" aria-label="Facebook" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/manuelpolancol/" aria-label="Instagram" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/manuelpolanco/" aria-label="LinkedIn" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
             <div class="footer__right">
