new file:   images/amor-marketing.png 	new file:   images/chamber-bh.png 	new file:   images/indigo.png 	new file:   images/vica.png 	modified:   index.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -175,16 +175,16 @@
             <!-- Partners Logo Section -->
             <div class="partners">
                 <div class="partner">
-                    <img src="/api/placeholder/150/80" alt="Beverly Hills Chamber of Commerce">
+                    <img src="images/chamber-bh.png" alt="Beverly Hills Chamber of Commerce">
                 </div>
                 <div class="partner">
-                    <img src="/api/placeholder/150/80" alt="VICA">
+                    <img src="images/vica.png" alt="VICA">
                 </div>
                 <div class="partner">
-                    <img src="/api/placeholder/150/80" alt="Amor Marketing">
+                    <img src="images/amor-marketing.png" alt="Amor Marketing">
                 </div>
                 <div class="partner">
-                    <img src="/api/placeholder/150/80" alt="Indigo Group">
+                    <img src="images/indigo.png" alt="Indigo Group">
                 </div>
             </div>
         </div>
@@ -262,8 +262,8 @@
                     <p class="contact__text">I'd love to hear from you—whether it's about collaboration, ideas, or questions. Let's build something impactful together.</p>
                     <p class="contact__projects">VISIT MY PROJECTS:</p>
                     <div class="contact__logos">
-                        <img src="/api/placeholder/120/40" alt="Amor Marketing" class="contact__logo">
-                        <img src="/api/placeholder/120/40" alt="Indigo Group" class="contact__logo">
+                        <img src="images/" alt="Amor Marketing" class="contact__logo">
+                        <img src="images/" alt="Indigo Group" class="contact__logo">
                     </div>
                 </div>
                 
