new file:   images/amor-marketing-white.png 	new file:   images/indigo-white.png 	modified:   index.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
                     <p class="contact__text">I'd love to hear from you—whether it's about collaboration, ideas, or questions. Let's build something impactful together.</p>
                     <p class="contact__projects">VISIT MY PROJECTS:</p>
                     <div class="contact__logos">
-                        <img src="images/" alt="Amor Marketing" class="contact__logo">
-                        <img src="images/" alt="Indigo Group" class="contact__logo">
+                        <img src="images/amor-marketing-white.png" alt="Amor Marketing" class="contact__logo">
+                        <img src="images/indigo-white.png" alt="Indigo Group" class="contact__logo">
                     </div>
                 </div>
                 
