modified:   index.html 	modified:   script.js

--- a/index.html
+++ b/index.html
@@ -271,11 +271,11 @@
                 <div class="contact__form-wrapper">
                     <form id="footerContactForm" class="contact__form">
                         <div class="form__row">
-                            <input type="text" placeholder="First name" required>
-                            <input type="text" placeholder="Last name" required>
+                            <input type="text" id="footerFirstName" placeholder="First name" required>
+                            <input type="text" id="footerLastName" placeholder="Last name" required>
                         </div>
-                        <input type="email" placeholder="Email Address" required>
-                        <textarea placeholder="Comment" required></textarea>
+                        <input type="email" id="footerEmail" placeholder="Email Address" required>
+                        <textarea id="footerComment" placeholder="Comment" required></textarea>
                         <button type="submit" class="btn btn--secondary">GET IN TOUCH</button>
                     </form>
                 </div>
