modified:   index.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <a href="#" class="btn btn--light">LEARN MORE ABOUT MANUEL</a>
             </div>
             <div class="about__image">
-                <div class="placeholder-image"></div>
+                <img src="images/2.JPG" alt="Manuel Alejandro Polanco Larreal" class="about__img">
             </div>
         </div>
     </section>
