modified:   index.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             
             <div class="realities__achievements">
                 <div class="realities__image">
-                    <div class="placeholder-image"></div>
+                    <img src="images/extra 2.jpg" alt="Panas Sin Límites Impact" class="realities__img">
                 </div>
                 <div class="realities__content">
                     <h3 class="realities__content-title">Key Achievements from<br>Panas Sin Límites:</h3>
